--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,13 +12,11 @@
  }
 
  body {
-   background-color: teal;
    margin: 0%;
 }
  
 img {
-   width: 10em;
-   height: 5em;
+   width: 15vh;
 }
  
  
@@ -31,7 +29,7 @@ img {
    justify-content: center;
    padding-top: 2em;
    padding-bottom: 2em;
-   margin-bottom: 3em;
+   margin-bottom: 15vh;
 }
  
  .flex-container2 {
@@ -41,10 +39,10 @@ img {
    background-color:#F3F3F3;
    text-align: center;
    margin:auto;
-   padding: 10px;
+   padding: 2em;
    width: 60%;
    align-items: center;
-   justify-content: center;
+   justify-content:space-evenly;
    border-radius: 13px;
  }
  
@@ -53,13 +51,11 @@ img {
    flex-direction: row;
    flex-wrap: wrap;
    background-color: #F3F3F3;
-   padding: 10px;
+   padding: 0.5em;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 15vh;
    align-items: center;
    justify-content: center;
-   left: 0;
-   bottom: 0;
    width: 100%;
  }
  
@@ -89,12 +85,11 @@ color: black;
    padding: 20px;
    text-align: center;
    text-decoration: none;
-   display: inline-block;
    font-size: 1em;
-   margin: 10px;
+   margin: 1em;
    cursor: pointer;
    border-radius: 11px;
-   width: 150px;
+   width: 8em;
  }
 
 
@@ -109,12 +104,11 @@ color: black;
    padding: 20px;
    text-align: center;
    text-decoration: none;
-   display: inline-block;
    font-size: 1em;
-   margin: 10%;
+   margin: auto;
    cursor: pointer;
    border-radius: 11px;
-   width: 150px;
+   width: 8em;
  }
 
  .buttonBoka:hover {
