--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,14 @@
    background-size: cover; /* Resize the background image to cover the entire container */
  }
 
+ .hero-image2 {
+   background-image: url("https://yuc-se.gumlet.net/wp-content/uploads/dsc06570.jpg"); /* The image used */
+   background-color:teal; /* Used if the image is unavailable */
+   background-position: center; /* Center the image */
+   background-repeat: no-repeat; /* Do not repeat the image */
+   background-size: cover; /* Resize the background image to cover the entire container */
+ }
+
  body {
    margin: 0%;
 }
@@ -58,7 +66,44 @@ img {
    justify-content: center;
    width: 100%;
  }
+
+ .flex-container4 {
+  background-color: #F3F3F3;
+  padding: 5vh;
+  margin: 10vh;
+  box-sizing: border-box;
+  border-radius: 11px;
+  justify-content: space-between;
+ } 
+
+ textarea {
+   width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+  font-size: 1.5vh;
+ }
  
+ input[type=text] {
+   width: 100%;
+   padding: 12px 20px;
+   margin: 8px 0;
+   box-sizing: border-box;
+   font-family: 'Courier New', Courier, monospace;
+ }
+
+
+select {
+   width: 100%;
+   padding: 12px 20px;
+   margin: 8px 0;
+   box-sizing: border-box;
+}
 
 h1{
    font-family:Arial, Helvetica, sans-serif;
@@ -113,4 +158,18 @@ color: black;
 
  .buttonBoka:hover {
    background-color:#bb567e;
+}
+
+button {
+   background-color: #000000;
+   border: none;
+   color: white;
+   padding: 20px;
+   text-align: center;
+   text-decoration: none;
+   font-size: 1em;
+   margin-top: 2em;
+   cursor: pointer;
+   border-radius: 11px;
+   width: 8em;
 }
