--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ img {
    width: 15vh;
 }
  
- 
+  /* header */
  .flex-container1 {
    display: flex;
    flex-direction: row;
@@ -40,6 +40,7 @@ img {
    margin-bottom: 15vh;
 }
  
+/* innehåll */
  .flex-container2 {
    display: flex;
    flex-direction: row;
@@ -54,6 +55,7 @@ img {
    border-radius: 13px;
  }
  
+ /* footer */
  .flex-container3 {
    display: flex;
    flex-direction: row;
@@ -67,6 +69,7 @@ img {
    width: 100%;
  }
 
+  /* boka bord-formulär */
  .flex-container4 {
   background-color: #F3F3F3;
   padding: 5vh;
@@ -74,7 +77,7 @@ img {
   box-sizing: border-box;
   border-radius: 11px;
   justify-content: space-between;
- } 
+} 
 
  textarea {
    width: 100%;
@@ -95,6 +98,14 @@ img {
    margin: 8px 0;
    box-sizing: border-box;
    font-family: 'Courier New', Courier, monospace;
+ }
+
+ label {
+   width: 100%;
+   margin: 8px 0;
+   box-sizing: border-box;
+   font-family: 'Courier New', Courier, monospace;
+   font-weight: bold;
  }
 
 
@@ -164,7 +175,7 @@ button {
    background-color: #000000;
    border: none;
    color: white;
-   padding: 20px;
+   padding: 15px;
    text-align: center;
    text-decoration: none;
    font-size: 1em;
@@ -172,4 +183,11 @@ button {
    cursor: pointer;
    border-radius: 11px;
    width: 8em;
+   display: block;
+   margin-left: auto;
+   margin-right: aut;
+}
+
+button:hover {
+   background-color:#F0669E;
 }
