form-button centered
saknades ett "o"

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -185,7 +185,7 @@ button {
    width: 8em;
    display: block;
    margin-left: auto;
-   margin-right: aut;
+   margin-right: auto;
 }
 
 button:hover {
