--- a/Meny.css
+++ b/Meny.css
@@ -1,4 +1,5 @@
 
+/* 
 body {
    background-image: url(https://yuc-se.gumlet.net/wp-content/uploads/dsc00009.jpg);
    background-position: center center;
